// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VolumeControl > matches the snapshot 1`] = `
"<div class="centerItems volumeControl"><button class="centerItems buttonLink" type="button" title="Mute">
    <phspeakerhigh class="icon" aria-hidden="true" size="24" weight="regular"></phspeakerhigh><span class="clamp text visuallyHidden">Mute</span>
  </button>
  <div class="centerItems smallFont volumeInputWrapper">
    <div class="inputRange" aria-label="Volume" aria-valuetext="1 of 1" hide-thumb="">
      <div class="centerItems slider">
        <div class="progressWrapper">
          <div class="process" style="width: 0px;"></div>
          <!--v-if-->
        </div>
        <div class="thumb" style="left: -6px;"></div>
        <!--v-if-->
      </div>
    </div>
    <p aria-hidden="" class="currentVolume">100</p>
    <p class="visuallyHidden"> Volume at 100% </p>
  </div>
</div>"
`;

exports[`VolumeControl > when isMuted value is true > matches the snapshot 1`] = `
"<div class="centerItems volumeControl"><button class="centerItems buttonLink" type="button" title="Unmute">
    <phspeakerhigh class="icon" aria-hidden="true" size="24" weight="regular"></phspeakerhigh><span class="clamp text visuallyHidden">Unmute</span>
  </button>
  <div class="centerItems smallFont volumeInputWrapper">
    <div class="inputRange" aria-label="Volume" aria-valuetext="1 of 1" hide-thumb="">
      <div class="centerItems slider">
        <div class="progressWrapper">
          <div class="process" style="width: 0px;"></div>
          <!--v-if-->
        </div>
        <div class="thumb" style="left: -6px;"></div>
        <!--v-if-->
      </div>
    </div>
    <p aria-hidden="" class="currentVolume">100</p>
    <p class="visuallyHidden"> Volume at 100% </p>
  </div>
</div>"
`;

exports[`VolumeControl > when volume value is 0 > matches the snapshot 1`] = `
"<div class="centerItems volumeControl"><button class="centerItems buttonLink" type="button" title="Unmute">
    <phspeakerx class="icon" aria-hidden="true" size="24" weight="regular"></phspeakerx><span class="clamp text visuallyHidden">Unmute</span>
  </button>
  <div class="centerItems smallFont volumeInputWrapper">
    <div class="inputRange" aria-label="Volume" hide-thumb="" aria-valuetext="0 of 1">
      <div class="centerItems slider">
        <div class="progressWrapper">
          <div class="process" style="width: 0px;"></div>
          <!--v-if-->
        </div>
        <div class="thumb" style="left: -6px;"></div>
        <!--v-if-->
      </div>
    </div>
    <p aria-hidden="" class="currentVolume">0</p>
    <p class="visuallyHidden"> Volume at 0% </p>
  </div>
</div>"
`;

exports[`VolumeControl > when volume value is 0.1 > matches the snapshot 1`] = `
"<div class="centerItems volumeControl"><button class="centerItems buttonLink" type="button" title="Unmute">
    <phspeakernone class="icon" aria-hidden="true" size="24" weight="regular"></phspeakernone><span class="clamp text visuallyHidden">Unmute</span>
  </button>
  <div class="centerItems smallFont volumeInputWrapper">
    <div class="inputRange" aria-label="Volume" hide-thumb="" aria-valuetext="0.1 of 1">
      <div class="centerItems slider">
        <div class="progressWrapper">
          <div class="process" style="width: 0px;"></div>
          <!--v-if-->
        </div>
        <div class="thumb" style="left: -6px;"></div>
        <!--v-if-->
      </div>
    </div>
    <p aria-hidden="" class="currentVolume">10</p>
    <p class="visuallyHidden"> Volume at 10% </p>
  </div>
</div>"
`;

exports[`VolumeControl > when volume value is 0.3 > matches the snapshot 1`] = `
"<div class="centerItems volumeControl"><button class="centerItems buttonLink" type="button" title="Unmute">
    <phspeakerlow class="icon" aria-hidden="true" size="24" weight="regular"></phspeakerlow><span class="clamp text visuallyHidden">Unmute</span>
  </button>
  <div class="centerItems smallFont volumeInputWrapper">
    <div class="inputRange" aria-label="Volume" hide-thumb="" aria-valuetext="0.3 of 1">
      <div class="centerItems slider">
        <div class="progressWrapper">
          <div class="process" style="width: 0px;"></div>
          <!--v-if-->
        </div>
        <div class="thumb" style="left: -6px;"></div>
        <!--v-if-->
      </div>
    </div>
    <p aria-hidden="" class="currentVolume">30</p>
    <p class="visuallyHidden"> Volume at 30% </p>
  </div>
</div>"
`;

exports[`VolumeControl > when volume value is 0.6 > matches the snapshot 1`] = `
"<div class="centerItems volumeControl"><button class="centerItems buttonLink" type="button" title="Unmute">
    <phspeakerhigh class="icon" aria-hidden="true" size="24" weight="regular"></phspeakerhigh><span class="clamp text visuallyHidden">Unmute</span>
  </button>
  <div class="centerItems smallFont volumeInputWrapper">
    <div class="inputRange" aria-label="Volume" hide-thumb="" aria-valuetext="0.6 of 1">
      <div class="centerItems slider">
        <div class="progressWrapper">
          <div class="process" style="width: 0px;"></div>
          <!--v-if-->
        </div>
        <div class="thumb" style="left: -6px;"></div>
        <!--v-if-->
      </div>
    </div>
    <p aria-hidden="" class="currentVolume">60</p>
    <p class="visuallyHidden"> Volume at 60% </p>
  </div>
</div>"
`;
